--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,25 +21,72 @@ android {
         }
     }
 
+    // region build types
+
     buildTypes {
-        release {
+        debug {
+            debuggable true
             minifyEnabled false
+            crunchPngs false
+            shrinkResources false
+            zipAlignEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        release {
+            minifyEnabled true
+            shrinkResources true
+            crunchPngs true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // endregion
+
+
+    // region compile options
+
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = JavaVersion.VERSION_11
+        freeCompilerArgs = ["-Xjvm-default=all"]
     }
-    buildFeatures {
-        compose true
-    }
+
     composeOptions {
         kotlinCompilerExtensionVersion KOTLIN_COMPILER_EXTENSION_VERSION
     }
+
+    // endregion
+
+    // region buildFeatures
+
+    buildFeatures {
+        compose true
+    }
+
+    // endregion
+
+    // region app bundles
+
+    bundle {
+        density {
+            enableSplit true
+        }
+        abi {
+            enableSplit true
+        }
+        language {
+            enableSplit false
+        }
+    }
+
+    // endregion
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -51,20 +98,24 @@ apply from: "../buildSrc/module_dependencies.gradle"
 
 dependencies {
 
+    coreLibraryDesugaring getLibrary("com.android.tools:desugar_jdk_libs")
+
     implementation getLibrary("androidx.core:core-ktx")
     implementation getLibrary("androidx.compose.material3:material3")
 
-    implementation getLibrary("androidx.compose.ui:ui")
-    implementation getLibrary("androidx.compose.ui:ui-tooling")
-    implementation getLibrary("androidx.compose.ui:ui-tooling-preview")
     implementation getLibrary("androidx.activity:activity-compose")
+    implementation getLibrary("androidx.compose.ui:ui")
+
+    implementation getLibrary("androidx.compose.ui:ui-tooling-preview")
+    debugImplementation getLibrary("androidx.compose.ui:ui-tooling")
+
+    debugImplementation getLibrary("androidx.compose.ui:ui-test-manifest")
 
     implementation getLibrary("androidx.lifecycle:lifecycle-runtime-ktx")
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.1"
+    testImplementation getLibrary("junit:junit")
+
+    androidTestImplementation getLibrary("androidx.test.ext:junit")
+    androidTestImplementation getLibrary("androidx.test.espresso:espresso-core")
+    androidTestImplementation getLibrary("androidx.compose.ui:ui-test-junit4")
 }
