enabled build config

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=false
 ## Determines whether to generate a BuildConfig class.
-android.defaults.buildfeatures.buildconfig=false
+android.defaults.buildfeatures.buildconfig=true
 ## Determines whether to support Data Binding.
 android.defaults.buildFeatures.dataBinding=false
 ## Determines whether to support View Binding.
