--- a/buildSrc/module_dependencies.gradle
+++ b/buildSrc/module_dependencies.gradle
@@ -2,6 +2,12 @@ ext {
 
     libraries = [
 
+            // kotlinx-datetime
+            "org.jetbrains.kotlinx:kotlinx-datetime" : "0.4.0",
+
+            "com.google.firebase:firebase-bom"          : "29.1.0",
+            "com.google.firebase:firebase-database-ktx" : "20.0.5",
+
             "androidx.core:core-ktx"                    : "1.9.0",
 
             // https://mvnrepository.com/artifact/com.jakewharton.timber/timber
